flux/bastille/apps/flux-system/capacitor/route/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: &hostname capacitor.chancey.dev
spec:
  hostnames:
    - *hostname
  parentRefs:
    - name: internal
      kind: Gateway
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: capacitor
          port: 9000
      matches:
        - path:
            type: PathPrefix
            value: /
